fix: resolve session loss and optimize for Render production deployment