@@ -12,7 +12,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -29,6 +31,8 @@ public class SecurityConfig {
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(AbstractHttpConfigurer::disable)
             .authorizeHttpRequests(auth -> auth
+                // Render Health Check ve public endpoint'ler
+                .requestMatchers("/actuator/health", "/actuator/info").permitAll()
                 .anyRequest().permitAll()
             );
         return http.build();
@@ -36,31 +40,38 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        // FRONTEND_URL env değişkeninden Render production URL'sini oku
         String frontendUrl = System.getenv("FRONTEND_URL");
+
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        java.util.List<String> origins = new java.util.ArrayList<>(Arrays.asList(
+
+        List<String> origins = new ArrayList<>(Arrays.asList(
                 "http://localhost:8000",
                 "http://127.0.0.1:8000",
                 "http://localhost:5173",
                 "http://127.0.0.1:5173",
-                "http://localhost:8080"
+                "http://localhost:3000"
         ));
 
-        if (frontendUrl != null && !frontendUrl.isEmpty()) {
-            origins.add(frontendUrl);
-            if (frontendUrl.endsWith("/")) {
-                origins.add(frontendUrl.substring(0, frontendUrl.length() - 1));
+        if (frontendUrl != null && !frontendUrl.isBlank()) {
+            // Hem slash'lı hem slash'sız versiyonu ekle
+            String trimmed = frontendUrl.stripTrailing();
+            if (trimmed.endsWith("/")) {
+                origins.add(trimmed);
+                origins.add(trimmed.substring(0, trimmed.length() - 1));
             } else {
-                origins.add(frontendUrl + "/");
+                origins.add(trimmed);
+                origins.add(trimmed + "/");
             }
         }
 
         configuration.setAllowedOrigins(origins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*")); // Daha esnek olması için her şeye izin verelim
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        
+        // Preflight cache süresi (browser OPTIONS isteği tekrarlamaz)
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
